--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: React Theme Sample
+Theme Name: Oribe
 Theme URI: http://example.com
 Author: hideokamoto
 Author URI: https://profiles.wordpress.org/hideokamoto
@@ -7,6 +7,6 @@ Description: This is Simply WordPress theme using React.
 Version: 0.0.1
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
-Text Domain: SAMPLE
+Text Domain: oribe
 Tags:
 */
