--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@ License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: oribe
 Tags:
 */
+
+img {
+	max-width: 100%;
+	height: auto;
+}
