delete panel-heading margin

--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ Text Domain: oribe
 Tags:
 */
 
+h1.panel-heading,
+h2.panel-heading,
+h3.panel-heading,
+h4.panel-heading,
+h5.panel-heading {
+	margin: 0;
+}
 img {
 	max-width: 100%;
 	height: auto;
